# Tempa

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.meet-worker  README.md  Untitled  architecture.html  docker-compose.yml  package-lock.json  prd.md  pyproject.toml  tempa-agent.2026-06-25.private-key.pem
config/: agents.yaml  groq_models.yaml  orchestrator.yaml  permissions.yaml  qa.yaml  skills.yaml  tools.yaml  varys.yaml
dashboard/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
deploy/: tempa-daemon.service
docs/: gmail-integration-checklist.md  index.html
extension/: manifest.json
scripts/: backup_vector_db.sh  meet-worker-entrypoint.sh  repair_chromadb.sh  run-native.sh  test-evolution-qr.sh  test-whatsapp-qr.sh  vendor-varys.sh
tests/: conftest.py  test_agent_intelligence.py  test_api.py  test_calendar_context.py  test_calendar_delete_purge.py  test_calendar_events.py  test_calendar_poller_dedup.py  test_calendar_sync.py  test_chat_sessions.py  test_chat_stream.py  test_clarification.py  test_coordinator.py  test_coordinator_go_approval.py  test_cross_channel_conversation.py  test_dashboard.py  test_dashboard_chat_ingest.py  test_gmail_context.py  test_gmail_query.py  test_gmail_recipients.py  test_gmail_send.py  test_google_oauth.py  test_grounding_verifier_integration.py  test_identity_linker.py  test_integration.py  test_intelligence_improvements.py  test_jira_client.py  test_jira_direct_reply.py  test_jira_pending_actions.py  test_jira_profiles.py  test_jira_sync.py  test_jira_ticket_flow.py  (+51 more)
(+329 files in other folders)
