[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tempa"
version = "0.1.0"
description = "Self-hosted AI personal core agent"
readme = "prd.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "groq>=0.13.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "einops>=0.8.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "httpx>=0.27.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.150.0",
    "python-dateutil>=2.9.0",
    "apscheduler>=3.10.0",
    "playwright>=1.40.0",
    "websockets>=12.0",
    "aiosqlite>=0.20.0",
    "sse-starlette>=2.1.0",
    "cryptography>=43.0.0",
    "aiohttp>=3.10.0",
    "aiofiles>=24.1.0",
    "qrcode[pil]>=8.0",
    "zeroconf>=0.132.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]

[project.scripts]
tempa = "tempa.cli.main:main"
tempa-meet-worker = "tempa.meet.worker_main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
